<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_info"
            android:title="@string/notifications"
            android:checked="true"/>
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_events_viewer"
            android:title="@string/events_viewer"/>
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_courses"
            android:title="@string/courses"/>
        <item
            android:id="@+id/nav_fifth_fragment"
            android:icon="@drawable/ic_chat"
            android:title="All Messages"/>

        <item
            android:id="@+id/nav_sixth_fragment"
            android:icon="@drawable/ic_chat"
            android:title="All Group Message"/>
    </group>
    <item android:title="@string/personal">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/personal_manager"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/manage"/>
                <item
                    android:id="@+id/personal_contact"
                    android:icon="@drawable/ic_contacts"
                    android:title="@string/contacts"/>
                <item
                    android:id="@+id/personal_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"/>
            </group>
        </menu>
    </item>
</menu>