<resources>
    <string name="app_name">ECS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="calendar">Calendar</string>
    <string name="events_viewer">Events Viewer</string>
    <string name="courses">Courses</string>
    <string name="group">Group</string>
    <string name="chat">Chat</string>
    <string name="personal">Personal</string>
    <string name="manage">Manage</string>
    <string name="contacts">Contacts</string>
    <string name="options">Options</string>
    <string name="title_activity_course">Course</string>
    <string name="title_activity_group">Group</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_options">Options</string>
    <string name="Calendar">Calendar</string>
    <string name="add_course">Add a new course</string>
    <string name="add_contact">Add a new contact</string>
    <string name="loading">Loading…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="headerImage_description">This is the user icon</string>
    <string name="headUsername_text">Android Studio</string>
    <string name="headerUserEmail_text">android.studio@android.com</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_profile_view">profileView</string>
    <string name="title_activity_chat_individual">chatIndividualActivity</string>
</resources>
